file(GLOB_RECURSE EX_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(EX_SRC_FILE ${EX_SRC_FILES})
  file(RELATIVE_PATH REL_EX_SRC_FILE ${CMAKE_CURRENT_SOURCE_DIR} ${EX_SRC_FILE})
  string(REPLACE ".cpp" "" EX_SRC_FILE_BASE ${REL_EX_SRC_FILE})
  add_executable(${EX_SRC_FILE_BASE} ${EX_SRC_FILE})
  target_link_libraries(${EX_SRC_FILE_BASE} example_common_config)

  add_custom_command(
    TARGET ${EX_SRC_FILE_BASE}
    POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${INPUT_YAML_PATH} $<TARGET_FILE_DIR:${EX_SRC_FILE_BASE}>
    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${INPUT_MULTI_YAML_PATH} $<TARGET_FILE_DIR:${EX_SRC_FILE_BASE}>
    COMMAND $<TARGET_FILE:${EX_SRC_FILE_BASE}> > ${CMAKE_CURRENT_SOURCE_DIR}/${EX_SRC_FILE_BASE}.output
    WORKING_DIRECTORY $<TARGET_FILE_DIR:${EX_SRC_FILE_BASE}>
  )
endforeach()
